# LevelUp-Tablet

./: .gitignore  .gitmodules  CMakeLists.txt  build_deps.sh  build_deps_win.sh  build_norm.sh  clean_deps.sh
src/: CMakeLists.txt  standalone.cpp  xplane.cpp
src/tablet/: CMakeLists.txt  sys_init.cpp  sys_init.h
src/tablet/gui/: CMakeLists.txt  cairo_helper_func.h  gui_brains.cpp  gui_brains.h  gui_colors.h  gui_main.cpp  gui_main.h  standalone-wind.cpp  standalone-wind.h
src/tablet/gui/components/: CMakeLists.txt  cmp_page.cpp  cmp_page.h  cmp_setup_mouse.cpp  cmp_setup_mouse.h
src/tablet/gui/pages/: CMakeLists.txt  pg_menu.cpp  pg_menu.h
